# pathhelper

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  promote_release.yml
doc/: development_guide.md
pathetic/: __init__.py  pathetic.py
pathhelper/: __init__.py
pathtools/: __init__.py  pathtool.py
scripts/: inject_version.py
tests/: test_pathetic.py  test_pathtools.py
