[project]
name = "pathhelper"
version = "UNKNOWN"
description = "Lightweight helpers for working with filesystem paths."
readme = "README.md"
requires-python = ">=3.7"

license = { text = "MIT" }

authors = [
    { name = "SleepyJack" }
]

keywords = ["filesystem", "path", "directory", "file", "utilities"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/SleepyJack/pathhelper"
Source = "https://github.com/SleepyJack/pathhelper"
Tracker = "https://github.com/SleepyJack/pathhelper/issues"
Documentation = "https://github.com/SleepyJack/pathhelper#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
